tweaks to gallery-postmessage

--- a/src/gallery-postmessage/tests/postmessage.html
+++ b/src/gallery-postmessage/tests/postmessage.html
@@ -29,7 +29,7 @@
 					Y.log(e.data);
 				});
 				
-				Y.postMessage(Y.config.window, ['foo', 'bar']);
+				Y.postMessage(Y.one('win'), ['foo', 'bar']);
 				
 			});
 		</script>
