--- a/files/gallery-model-sync-rest_js_model-sync-rest.js.html
+++ b/files/gallery-model-sync-rest_js_model-sync-rest.js.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>gallery-model-sync-rest&#x2F;js&#x2F;model-sync-rest.js - Async</title>
+    <title>gallery-model-sync-rest&#x2F;js&#x2F;model-sync-rest.js - YUI 3 Gallery</title>
     <link rel="stylesheet" href="http:&#x2F;&#x2F;yui.yahooapis.com&#x2F;3.4.0&#x2F;build&#x2F;cssgrids&#x2F;cssgrids-min.css">
     <link rel="stylesheet" href="..&#x2F;assets/vendor/prettify/prettify-min.css">
     <link rel="stylesheet" href="..&#x2F;assets/css/main.css" id="site_styles">
