--- a/files/gallery-model-sync-rest_js_model-sync-rest.js.html
+++ b/files/gallery-model-sync-rest_js_model-sync-rest.js.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>gallery-model-sync-rest&#x2F;js&#x2F;model-sync-rest.js - Async</title>
-    <link rel="stylesheet" href="http:&#x2F;&#x2F;yui.yahooapis.com&#x2F;3.4.0&#x2F;build&#x2F;cssgrids&#x2F;cssgrids-min.css">
+    <title>gallery-model-sync-rest&#x2F;js&#x2F;model-sync-rest.js - YUI 3 Gallery</title>
+    <link rel="stylesheet" href="http:&#x2F;&#x2F;yui.yahooapis.com&#x2F;3.5.0pr4&#x2F;build&#x2F;cssgrids&#x2F;cssgrids-min.css">
     <link rel="stylesheet" href="..&#x2F;assets/vendor/prettify/prettify-min.css">
     <link rel="stylesheet" href="..&#x2F;assets/css/main.css" id="site_styles">
-    <script src="http:&#x2F;&#x2F;yui.yahooapis.com&#x2F;3.4.0&#x2F;build&#x2F;yui&#x2F;yui-min.js"></script>
+    <script src="http:&#x2F;&#x2F;yui.yahooapis.com&#x2F;3.5.0pr4&#x2F;build&#x2F;yui&#x2F;yui-min.js"></script>
 </head>
 <body class="yui3-skin-sam">
 
@@ -78,8 +78,9 @@
 
 
             <div class="apidocs">
-                <div id="docs-main" class="content">
-                    <h1 class="file-heading">File: gallery-model-sync-rest&#x2F;js&#x2F;model-sync-rest.js</h1>
+                <div id="docs-main">
+                    <div class="content">
+                        <h1 class="file-heading">File: gallery-model-sync-rest&#x2F;js&#x2F;model-sync-rest.js</h1>
 
 <div class="file">
     <pre class="code prettyprint linenums">
@@ -506,6 +507,7 @@ Y.namespace(&#x27;ModelSync&#x27;).REST = RESTSync;
     </pre>
 </div>
 
+                    </div>
                 </div>
             </div>
         </div>
