--- a/files/gallery-model-sync-rest_js_model-sync-rest.js.html
+++ b/files/gallery-model-sync-rest_js_model-sync-rest.js.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="utf-8">
     <title>gallery-model-sync-rest&#x2F;js&#x2F;model-sync-rest.js - YUI 3 Gallery</title>
-    <link rel="stylesheet" href="http:&#x2F;&#x2F;yui.yahooapis.com&#x2F;3.5.0pr4&#x2F;build&#x2F;cssgrids&#x2F;cssgrids-min.css">
+    <link rel="stylesheet" href="http:&#x2F;&#x2F;yui.yahooapis.com&#x2F;3.5.0&#x2F;build&#x2F;cssgrids&#x2F;cssgrids-min.css">
     <link rel="stylesheet" href="..&#x2F;assets/vendor/prettify/prettify-min.css">
     <link rel="stylesheet" href="..&#x2F;assets/css/main.css" id="site_styles">
-    <script src="http:&#x2F;&#x2F;yui.yahooapis.com&#x2F;3.5.0pr4&#x2F;build&#x2F;yui&#x2F;yui-min.js"></script>
+    <script src="http:&#x2F;&#x2F;yui.yahooapis.com&#x2F;3.5.0&#x2F;build&#x2F;yui&#x2F;yui-min.js"></script>
 </head>
 <body class="yui3-skin-sam">
 
 <div id="doc">
     <div id="hd" class="yui3-g header">
         <div class="yui3-u-3-4">
-            <h1><img src="..&#x2F;assets/css/logo.png"></h1>
+            
+                <h1><img src="..&#x2F;assets/css/logo.png" title="YUI 3 Gallery"></h1>
+            
         </div>
         <div class="yui3-u-1-4 version">
             <em>API Docs for: </em>
@@ -102,10 +104,6 @@ when sub-classing ModelList.
 
     var User = Y.Base.create(&#x27;user&#x27;, Y.Model, [Y.ModelSync.REST], {
         root: &#x27;&#x2F;user&#x27;
-    }, {
-        ATTRS: {
-            name: {}
-        }
     });
 
     var Users = Y.Base.create(&#x27;users&#x27;, Y.ModelList, [Y.ModelSync.REST], {
@@ -128,7 +126,7 @@ var Lang = Y.Lang,
 
 &#x2F;&#x2F; -- RESTSync -----------------------------------------------------------------
 
- function RESTSync() {}
+function RESTSync() {}
 
 &#x2F;**
 Static hash lookup table of RESTful HTTP methods corresponding to CRUD actions.
@@ -155,16 +153,16 @@ RESTSync.HTTP_METHODS = {
 Default headers used with all XHRs.
 
 These headers will be merged with any request-specific headers, and the request-
-specific headers will take presidence.
+specific headers will take precedence.
 
 @property HTTP_HEADERS
 @type Object
-@static
 @default
     {
         &#x27;Accept&#x27;      : &#x27;application&#x2F;json&#x27;,
         &#x27;Content-Type&#x27;: &#x27;application&#x2F;json&#x27;
     }
+@static
 **&#x2F;
 RESTSync.HTTP_HEADERS = {
     &#x27;Accept&#x27;      : &#x27;application&#x2F;json&#x27;,
@@ -172,23 +170,25 @@ RESTSync.HTTP_HEADERS = {
 };
 
 &#x2F;**
-Default number of milliseconds before the XHR will timeout&#x2F;abort.
+The number of milliseconds before the XHR will timeout&#x2F;abort. This defaults to
+30 seconds.
 
-This can be overridden on a per-request basis.
+**Note:** This can be overridden on a per-request basis. See &#x60;sync()&#x60; method.
 
 @property HTTP_TIMEOUT
 @type Number
+@default 30000
 @static
-@default undefined
 **&#x2F;
+RESTSync.HTTP_TIMEOUT = 30000;
 
 &#x2F;**
 Static flag to use the HTTP POST method instead of PUT or DELETE.
 
 If the server-side HTTP framework isn&#x27;t RESTful, setting this flag to &#x60;true&#x60;
 will cause all PUT and DELETE requests to instead use the POST HTTP method, and
-add a X-HTTP-Method-Override HTTP header with the value of the method type which
-was overridden.
+add a &#x60;X-HTTP-Method-Override&#x60; HTTP header with the value of the method type
+which was overridden.
 
 @property EMULATE_HTTP
 @type Boolean
@@ -198,16 +198,43 @@ was overridden.
 RESTSync.EMULATE_HTTP = false;
 
 &#x2F;**
+A request authenticity token to validate HTTP requests made by this extension
+with the server when the request results in changing persistent state. This
+allows you to protect your server from CSRF attacks.
+
+A CSRF token provided by the server can be embedded in the HTML document and
+assigned to &#x60;YUI.Env.CSRF_TOKEN&#x60; like this:
+
+    &lt;script&gt;
+        YUI.Env.CSRF_TOKEN = {{session.authenticityToken}};
+    &lt;&#x2F;script&gt;
+
+The above should come after YUI see file so that &#x60;YUI.Env&#x60; has been defined.
+
+**Note:** This can be overridden on a per-request basis. See &#x60;sync()&#x60; method.
+
+When a value for the CSRF token is provided, either statically or via &#x60;options&#x60;
+passed to the &#x60;save()&#x60; and &#x60;destroy()&#x60; methods, the applicable HTTP requests
+will have a &#x60;X-CSRF-Token&#x60; header added with the token value.
+
+@property CSRF_TOKEN
+@type String
+@default YUI.Env.CSRF_TOKEN
+@static
+**&#x2F;
+RESTSync.CSRF_TOKEN = YUI.Env.CSRF_TOKEN;
+
+&#x2F;**
 Properties that shouldn&#x27;t be turned into ad-hoc attributes when passed to a
 Model or ModelList constructor.
 
 @property _NON_ATTRS_CFG
 @type Array
-@default [&#x27;url&#x27;]
+@default [&#x27;root&#x27;, &#x27;url&#x27;]
 @static
 @protected
 **&#x2F;
-RESTSync._NON_ATTRS_CFG = [&#x27;url&#x27;];
+RESTSync._NON_ATTRS_CFG = [&#x27;root&#x27;, &#x27;url&#x27;];
 
 RESTSync.prototype = {
 
@@ -226,10 +253,6 @@ RESTSync.prototype = {
     @example
         var User = Y.Base.create(&#x27;user&#x27;, Y.Model, [Y.ModelSync.REST], {
             root: &#x27;&#x2F;user&#x2F;&#x27;
-        }, {
-            ATTRS: {
-                name: {}
-            }
         });
 
         var myUser = new User({id: &#x27;123&#x27;});
@@ -284,10 +307,6 @@ RESTSync.prototype = {
         var User = Y.Base.create(&#x27;user&#x27;, Y.Model, [Y.ModelSync.REST], {
             root: &#x27;&#x2F;users&#x27;,
             url : &#x27;&#x2F;user&#x2F;{id}&#x27;
-        }, {
-            ATTRS: {
-                name: {}
-            }
         });
 
         var myUser = new User({id: &#x27;123&#x27;});
@@ -306,11 +325,12 @@ RESTSync.prototype = {
         var root = this.root,
             url;
 
-        if (this instanceof Y.ModelList || this.isNew()) {
+        if (this._isYUIModelList || this.isNew()) {
             return root;
         }
 
         url = this.getAsURL(&#x27;id&#x27;);
+
         if (root &amp;&amp; root.charAt(root.length - 1) === &#x27;&#x2F;&#x27;) {
             &#x2F;&#x2F; Add trailing-slash because root has a trailing-slash.
             url += &#x27;&#x2F;&#x27;;
@@ -342,11 +362,16 @@ RESTSync.prototype = {
       * **update**: Update an existing model.
       * **delete**: Delete an existing model.
 
-    @param {Object} [options] Sync options.
+    @param {Object} [options] Sync options:
+      @param {String} [options.csrfToken] The authenticity token used by the
+        server to verify the validity of this request and protected against CSRF
+        attacks. This overrides the default provided by the &#x60;CSRF_TOKEN&#x60; static
+        property.
       @param {Object} [options.headers] The HTTP headers to mix with the default
         headers specified by the &#x60;headers&#x60; property.
       @param {Number} [options.timeout] The number of milliseconds before the
-        request will timeout and be aborted.
+        request will timeout and be aborted. This overrides the default provided
+        by the &#x60;HTTP_TIMEOUT&#x60; static property.
     @param {callback} [callback] Called when the sync operation finishes.
       @param {Error|null} callback.err If an error occurred, this parameter will
         contain the error. If the sync operation succeeded, _err_ will be
@@ -358,10 +383,11 @@ RESTSync.prototype = {
     sync: function (action, options, callback) {
         options || (options = {});
 
-        var url     = this._getURL(action),
-            method  = RESTSync.HTTP_METHODS[action],
-            headers = Y.merge(RESTSync.HTTP_HEADERS, options.headers),
-            timeout = options.timeout || RESTSync.HTTP_TIMEOUT,
+        var url       = this._getURL(action),
+            method    = RESTSync.HTTP_METHODS[action],
+            headers   = Y.merge(RESTSync.HTTP_HEADERS, options.headers),
+            timeout   = options.timeout || RESTSync.HTTP_TIMEOUT,
+            csrfToken = options.csrfToken || RESTSync.CSRF_TOKEN,
             entity;
 
         &#x2F;&#x2F; Prepare the content if we are sending data to the server.
@@ -378,8 +404,16 @@ RESTSync.prototype = {
 
             &#x2F;&#x2F; Pass along original method type in the headers.
             headers[&#x27;X-HTTP-Method-Override&#x27;] = method;
+
             &#x2F;&#x2F; Fall-back to using POST method type.
             method = &#x27;POST&#x27;;
+        }
+
+        &#x2F;&#x2F; Add CSRF token to HTTP request headers if one is specified.
+        if (csrfToken &amp;&amp;
+                (method === &#x27;POST&#x27; || method === &#x27;PUT&#x27; || method === &#x27;DELETE&#x27;)) {
+
+            headers[&#x27;X-CSRF-Token&#x27;] = csrfToken;
         }
 
         &#x2F;&#x2F; Setup and send the XHR.
@@ -428,7 +462,7 @@ RESTSync.prototype = {
             return this.url(action);
         }
 
-        if (this instanceof Y.Model) {
+        if (this._isYUIModel) {
             data = {};
 
             Y.Object.each(this.toJSON(), function (v, k) {
@@ -449,8 +483,8 @@ RESTSync.prototype = {
     Joins the &#x60;root&#x60; URL to the specified _url_, normalizing leading&#x2F;trailing
     &#x60;&#x2F;&#x60; characters.
 
-    Copied from YUI 3&#x27;s &#x60;Y.Controller&#x60; Class: by Ryan Grove (Yahoo! Inc.)
-    https:&#x2F;&#x2F;github.com&#x2F;yui&#x2F;yui3&#x2F;blob&#x2F;master&#x2F;src&#x2F;app&#x2F;js&#x2F;controller.js
+    Copied from YUI 3&#x27;s &#x60;Y.Router&#x60; Class: by Ryan Grove (Yahoo! Inc.)
+    http:&#x2F;&#x2F;yuilibrary.com&#x2F;yui&#x2F;docs&#x2F;api&#x2F;classes&#x2F;Router.html#method__joinURL
 
     @example
         model.root = &#x27;&#x2F;foo&#x27;
@@ -492,7 +526,7 @@ RESTSync.prototype = {
     place to start.
 
     @method _serialize
-    @return {String} serialized HTTP request entity body
+    @return {String} serialized HTTP request entity body.
     @protected
     **&#x2F;
     _serialize: function () {
@@ -516,10 +550,7 @@ Y.namespace(&#x27;ModelSync&#x27;).REST = RESTSync;
 <script src="..&#x2F;assets/vendor/prettify/prettify-min.js"></script>
 <script>prettyPrint();</script>
 <script src="..&#x2F;assets/js/yui-prettify.js"></script>
-<!--script src="..&#x2F;assets/js/tabs.js"></script-->
 <script src="..&#x2F;assets/../api.js"></script>
-
-
 <script src="..&#x2F;assets/js/api-filter.js"></script>
 <script src="..&#x2F;assets/js/api-list.js"></script>
 <script src="..&#x2F;assets/js/api-search.js"></script>
