--- a/files/gallery-model-sync-yql_js_model-sync-yql.js.html
+++ b/files/gallery-model-sync-yql_js_model-sync-yql.js.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="utf-8">
     <title>gallery-model-sync-yql&#x2F;js&#x2F;model-sync-yql.js - YUI 3 Gallery</title>
-    <link rel="stylesheet" href="http:&#x2F;&#x2F;yui.yahooapis.com&#x2F;3.5.0pr4&#x2F;build&#x2F;cssgrids&#x2F;cssgrids-min.css">
+    <link rel="stylesheet" href="http:&#x2F;&#x2F;yui.yahooapis.com&#x2F;3.5.0&#x2F;build&#x2F;cssgrids&#x2F;cssgrids-min.css">
     <link rel="stylesheet" href="..&#x2F;assets/vendor/prettify/prettify-min.css">
     <link rel="stylesheet" href="..&#x2F;assets/css/main.css" id="site_styles">
-    <script src="http:&#x2F;&#x2F;yui.yahooapis.com&#x2F;3.5.0pr4&#x2F;build&#x2F;yui&#x2F;yui-min.js"></script>
+    <script src="http:&#x2F;&#x2F;yui.yahooapis.com&#x2F;3.5.0&#x2F;build&#x2F;yui&#x2F;yui-min.js"></script>
 </head>
 <body class="yui3-skin-sam">
 
 <div id="doc">
     <div id="hd" class="yui3-g header">
         <div class="yui3-u-3-4">
-            <h1><img src="..&#x2F;assets/css/logo.png"></h1>
+            
+                <h1><img src="..&#x2F;assets/css/logo.png" title="YUI 3 Gallery"></h1>
+            
         </div>
         <div class="yui3-u-1-4 version">
             <em>API Docs for: </em>
@@ -266,10 +268,7 @@ Y.namespace(&#x27;ModelSync&#x27;).YQL = YQLSync;
 <script src="..&#x2F;assets/vendor/prettify/prettify-min.js"></script>
 <script>prettyPrint();</script>
 <script src="..&#x2F;assets/js/yui-prettify.js"></script>
-<!--script src="..&#x2F;assets/js/tabs.js"></script-->
 <script src="..&#x2F;assets/../api.js"></script>
-
-
 <script src="..&#x2F;assets/js/api-filter.js"></script>
 <script src="..&#x2F;assets/js/api-list.js"></script>
 <script src="..&#x2F;assets/js/api-search.js"></script>
